--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -4,16 +4,13 @@
     "Lotteries":"Lotteries",
     "Contact":"Contact",
     "History":"History",
-    "Index_tittle": "Loma Lotto - Home page",
-    "Lotteries_tittle": "Loma Lotto - All lotteries page",
-    "History_tittle": "Loma Lotto - History page",
-    "Result_tittle": "Loma Lotto - Results page",
-    "NEED_TO_KNOW_ABOUT":"NEED TO KNOW ABOUT",
+    "Index_tittle":"Malaysia Lottery - Home page",
+    "Lotteries_tittle":"Malaysia Lottery - All lotteries page",
+    "History_tittle":"Malaysia Lottery - History page",
+    "Result_tittle":"Malaysia Lottery - Results page",
     "how_to":"how to",
     "play_4D":"play 4D",
-    "Lotto_online":"Lotto online", 
     "Play_Lottery":"Play Lottery",
-    "Explore_More":"Explore More",
     "copyright":"copyright © 2022. all right reserved by PokLotto",
     "All_lotteries":"All lotteries",
     "pick_your_lucky_number":"pick your lucky number",
@@ -29,9 +26,6 @@
     "Small_Bet":"Small Bet",
     "Bet_Type":"Bet Type",
     "Amount":"Amount",
-    "Action":"Action",
-    "Box":"Box",
-    "iBox":"iBox",
     "Total_Stake":"Total Stake",
     "Cancel":"Cancel",
     "Check_Continue":"Check & Continue",
@@ -45,64 +39,45 @@
     "step_3_tittle":"Add selected numbers to the cart, check if you have sufficient balance then place your order.",
     "step_4_heading":"Check Winnings.",
     "step_4_tittle":"Congratulations! You are winner if your selected number are in the announced winners list.",
-    "Betting": "Betting",
-    "heading_lotto": "Quick Choose Your Own Numbers",
-    "smalltext_lotto": "Lotteries",
-    "Commission": "Commission (%)",
-    "Net_Amount": "Net Amount",
-    "Total": "Total",
-    "Sub_Total": "Sub Total",
-    "Result": "Results",
-    "Bet_Details": "Bet Details",
-    "Success": "Success",
-    "Transactions_Successful": "Transactions Successful !",
-    "Thank_You": "",
-    "Your_Transactions_Reference_Number": "Your Transactions Reference Number: #",
-    "Note": "Note",
-    "seccess_msg": "To check your transaction details, please proceed to History section, under Unsettled Tab.",
-    "Unsettled_Bets": "Unsettled Bets",
-    "Settled_Bets": " Settled Bets",
-    "Ref_Id": " Ref Id",
-    "Game_Play": " Game Play",
-    "Betting_Date_From": " Betting Date From",
-    "To": "To",
-    "Reference_Id": " Reference Id",
-    "Bet_for": " Bet for",
-    "Game_Name": " Game Name",
-    "Filter_By_Ref_ID": " Filter By Ref ID",
-    "Winning_Amount": " Winning Amount",
-    "Win_Category": " Win Category",
-    "Profit": " Profit",
-    "Losses": " Losses",
-    "View": " View",
-    "PAYOUTS": " PAYOUTS",
-    "Winning_Payouts": " Winning Payouts",
-    "Prize_Payouts": " Prize Payouts",
-    "BIG_FORECAST": " BIG FORECAST",
-    "SMALL_FORECAST": " SMALL FORECAST",
-    "PRIZE_AMOUNT": " PRIZE AMOUNT",
-    "Special_Prize": " Special Prize",
-    "Consolation_Prize": " Consolation Prize",
-    "1st_Prize": " 1st Prize",
-    "2nd_Prize": " 2nd Prize",
-    "3rd_Prize": " 3rd Prize",
-    "Back": "Back",
-    "Betting_Date": "Betting Date",
-    "User_Name": "User Name",
-    "Confirm": "Confirm",
-    "Ok": "Ok",
-    "Date": "Date",
-    "Package": "Package",
-    "Detail": "Detail",
-    "Search": "Search",
-    "All_Game": "All Game",
-    "No_Result_For_Date": "No Result For Date",
-    "Transactions": "Transactions",
+    "Betting":"Betting",
+    "heading_lotto":"Quick Choose Your Own Numbers",
+    "smalltext_lotto":"Lotteries",
+    "Net_Amount":"Net Amount",
+    "Total":"Total",
+    "Result":"Results",
+    "Bet_Details":"Bet Details",
+    "Success":"Success",
+    "Winning_Amount":" Winning Amount",
+    "Win_Category":" Win Category",
+    "Profit":" Profit",
+    "Losses":" Losses",
+    "View":" View",
+    "PAYOUTS":" PAYOUTS",
+    "Winning_Payouts":" Winning Payouts",
+    "Prize_Payouts":" Prize Payouts",
+    "BIG_FORECAST":" BIG FORECAST",
+    "SMALL_FORECAST":" SMALL FORECAST",
+    "PRIZE_AMOUNT":"Winning Amount",
+    "Special_Prize":" Special Prize",
+    "Consolation_Prize":" Consolation Prize",
+    "1st_Prize":" 1st Prize",
+    "2nd_Prize":" 2nd Prize",
+    "3rd_Prize":" 3rd Prize",
+    "Betting_Date":"Betting Date",
+    "User_Name":"User Name",
+    "Confirm":"Confirm",
+    "Ok":"Ok",
+    "Date":"Date",
+    "Package":"Package",
+    "Detail":"Detail",
+    "Search":"Search",
+    "All_Game":"All Game",
+    "Transactions":"Transactions",
     "transaction_type":"Transaction Type",
     "transaction_id":"Transaction ID",
     "Betting_Details":"Betting Details",
     "Transaction_Details":"Transaction Details",
-    "Contest_your_chance_to": "Contest your chance to",
+    "Contest_your_chance_to":"Contest your chance to",
     "Special":"Special",
     "Draw":"Draw",
     "Dont_miss_your_chance":"Don't miss your chance. Will you be our next",
@@ -126,10 +101,5 @@
     "Big":"Big",
     "M":"M",
     "P":"P",
-    "Bet_Successful":"Bet Successful",
-    "B":"B",
-    "I":"I",
-    "R":"R",
-    "A":"A",
-    "C":"C"
-    }
+    "Bet_Successful":"Bet Successful"
+}
