--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -1,130 +1,105 @@
 {
-    "Homepage":"Home",
-    "About_us":"About us",
-    "Lotteries":"Lotteries",
-    "Contact":"Contact",
-    "History":"History",
-    "Index_tittle": "Loma Lotto - Home page",
-    "Lotteries_tittle": "Loma Lotto - All lotteries page",
-    "History_tittle": "Loma Lotto - History page",
-    "Result_tittle": "Loma Lotto - Results page",
-    "NEED_TO_KNOW_ABOUT":"NEED TO KNOW ABOUT",
-    "how_to":"how to",
-    "play_4D":"play 4D",
-    "Lotto_online":"Lotto online", 
-    "Play_Lottery":"Play Lottery",
-    "Explore_More":"Explore More",
-    "copyright":"copyright © 2022. all right reserved by PokLotto",
-    "All_lotteries":"All lotteries",
-    "pick_your_lucky_number":"pick your lucky number",
-    "Select_Date":"Select Date",
-    "Select_Game":"Select Game",
-    "Current_Balance":"Current Balance",
-    "Go_To_History":"Transaction History",
-    "No":"No.",
-    "Sr_No":"No.",
-    "Auto":"Auto",
-    "Number":"Number",
-    "Big_Bet":"Big Bet",
-    "Small_Bet":"Small Bet",
-    "Bet_Type":"Bet Type",
-    "Amount":"Amount",
-    "Action":"Action",
-    "Box":"Box",
-    "iBox":"iBox",
-    "Total_Stake":"Total Stake",
-    "Cancel":"Cancel",
-    "Check_Continue":"Check & Continue",
-    "How_to_play":"How to play",
-    "Easiest_Way_To_Picking_A_Number":"Easiest Way To Picking A Number",
-    "step_1_heading":"Set A Budget",
-    "step_1_tittle":"Playing the lottery is gambling, so keep it fun by treating it as part of your entertainment budget.",
-    "step_2_heading":"Choose Your Numbers.",
-    "step_2_tittle":"Pick single/multiple 4 digit numbers from 0000 to 9999. Choose how you want to play (Big bet, Small bet etc..)",
-    "step_3_heading":"Buy Your Numbers.",
-    "step_3_tittle":"Add selected numbers to the cart, check if you have sufficient balance then place your order.",
-    "step_4_heading":"Check Winnings.",
-    "step_4_tittle":"Congratulations! You are winner if your selected number are in the announced winners list.",
-    "Betting": "Betting",
-    "heading_lotto": "Quick Choose Your Own Numbers",
-    "smalltext_lotto": "Lotteries",
-    "Commission": "Commission (%)",
-    "Net_Amount": "Net Amount",
-    "Total": "Total",
-    "Sub_Total": "Sub Total",
-    "Result": "Results",
-    "Bet_Details": "Bet Details",
-    "Success": "Success",
-    "Transactions_Successful": "Transactions Successful !",
-    "Thank_You": "",
-    "Your_Transactions_Reference_Number": "Your Transactions Reference Number: #",
-    "Note": "Note",
-    "seccess_msg": "To check your transaction details, please proceed to History section, under Unsettled Tab.",
-    "Unsettled_Bets": "Unsettled Bets",
-    "Settled_Bets": " Settled Bets",
-    "Ref_Id": " Ref Id",
-    "Game_Play": " Game Play",
-    "Betting_Date_From": " Betting Date From",
-    "To": "To",
-    "Reference_Id": " Reference Id",
-    "Bet_for": " Bet for",
-    "Game_Name": " Game Name",
-    "Filter_By_Ref_ID": " Filter By Ref ID",
-    "Winning_Amount": " Winning Amount",
-    "Win_Category": " Win Category",
-    "Profit": " Profit",
-    "Losses": " Losses",
-    "View": " View",
-    "PAYOUTS": " PAYOUTS",
-    "Winning_Payouts": " Winning Payouts",
-    "Prize_Payouts": " Prize Payouts",
-    "BIG_FORECAST": " BIG FORECAST",
-    "SMALL_FORECAST": " SMALL FORECAST",
-    "PRIZE_AMOUNT": " PRIZE AMOUNT",
-    "Special_Prize": " Special Prize",
-    "Consolation_Prize": " Consolation Prize",
-    "1st_Prize": " 1st Prize",
-    "2nd_Prize": " 2nd Prize",
-    "3rd_Prize": " 3rd Prize",
-    "Back": "Back",
-    "Betting_Date": "Betting Date",
-    "User_Name": "User Name",
-    "Confirm": "Confirm",
-    "Ok": "Ok",
-    "Date": "Date",
-    "Package": "Package",
-    "Detail": "Detail",
-    "Search": "Search",
-    "All_Game": "All Game",
-    "No_Result_For_Date": "No Result For Date",
-    "Transactions": "Transactions",
-    "transaction_type":"Transaction Type",
-    "transaction_id":"Transaction ID",
-    "Betting_Details":"Betting Details",
-    "Transaction_Details":"Transaction Details",
-    "Contest_your_chance_to": "Contest your chance to",
-    "Special":"Special",
-    "Draw":"Draw",
-    "Dont_miss_your_chance":"Don't miss your chance. Will you be our next",
-    "Lucky_Winner":"Lucky Winner?",
-    "Start_playing_now":"Start Betting Now",
-    "Announcement":"Announcement",
-    "Play_now":"Bet Now",
-    "Past_Draw_Result":"Past draw result",
-    "Last_draw_date":"Last draw date",
-    "Draw_Id":"Draw ID",
+    "Homepage":"ទំព័រដើម",
+    "About_us":"អំពី​ពួក​យើង",
+    "Lotteries":"ឆ្នោត",
+    "Contact":"ទំនាក់ទំនង",
+    "History":"ប្រវត្តិនៃបុងមេ",
+    "Index_tittle":"ឆ្នោតម៉ាឡេស៊ី - គេហទំព័រដើម",
+    "Lotteries_tittle":"ឆ្នោតម៉ាឡេស៊ី - ទព័រឆ្នោតទាំងអស់",
+    "History_tittle":"ឆ្នោតម៉ាឡេស៊ី - ទំព័រមុន​",
+    "Result_tittle":"ឆ្នោតម៉ាឡេស៊ី - ទំព័រលទ្ធផល",
+    "how_to":"ធ្វើដូចម្តេច",
+    "play_4D":"លេង 4D",
+    "Play_Lottery":"លេងឆ្នោត",
+    "copyright":"រក្សាសិទ្ធិ© 2022. រក្សាទុកដោយ Poklotto",
+    "All_lotteries":"ឆ្នោតទាំងអស់",
+    "pick_your_lucky_number":"ជ្រើសរើសលេខសំណាងរបស់អ្នក",
+    "Select_Date":"ជ្រើសរើសកាលបរិច្ឆេទ",
+    "Select_Game":"ជ្រើសរើសហ្គេម",
+    "Current_Balance":"សមតុល្យ​បច្ចុប្បន្ន",
+    "Go_To_History":"ប្រវត្តិប្រតិបត្តិការ",
+    "No":"លេខរៀង",
+    "Sr_No":"លេខរៀង",
+    "Auto":"ស្វ័យប្រវត្ត",
+    "Number":"ចំនួន",
+    "Big_Bet":"ការភ្នាល់ធំ",
+    "Small_Bet":"ការភ្នាល់តូច",
+    "Bet_Type":"ប្រភេទភ្នាល់",
+    "Amount":"ចំនួនទឹកប្រាក់",
+    "Total_Stake":"ភាគហ៊ុនសរុប",
+    "Cancel":"លុបចោល",
+    "Check_Continue":"ពិនិត្យនិងបន្ត",
+    "How_to_play":"របៀបលេង",
+    "Easiest_Way_To_Picking_A_Number":"មធ្យោបាយងាយស្រួលបំផុតក្នុងការជ្រើសរើសលេខ",
+    "step_1_heading":"កំណត់ថវិកា",
+    "step_1_tittle":"ការលេងឆ្នោតគឺជាល្បែងដែលធ្វើឱ្យរីករាយនិងជាផ្នែកមួយនៃការម្សាន្តរបស់អ្នក។",
+    "step_2_heading":"ជ្រើសរើសលេខរបស់អ្នក។",
+    "step_2_tittle":"ជ្រើសយកលេខចាប់ពី 0000 ដល់ 9999 តែមួយ / ច្រើន 4 ខ្ទង់ ។ ជ្រើសរើសរបៀបដែលអ្នកចង់លេង (ការភ្នាល់ធំការភ្នាល់តូចតាច។ ល។ )",
+    "step_3_heading":"ទិញលេខរបស់អ្នក។",
+    "step_3_tittle":"បន្ថែមលេខដែលបានជ្រើសរើសទៅក្នុងកន្រ្តកពិនិត្យមើលថាតើអ្នកមានសមតុល្យគ្រប់គ្រាន់បន្ទាប់មកដាក់ការបញ្ជាទិញរបស់អ្នក។",
+    "step_4_heading":"ពិនិត្យការឈ្នះ។",
+    "step_4_tittle":"អបអរសាទរ! អ្នកគឺជាអ្នកឈ្នះប្រសិនបើលេខដែលអ្នកបានជ្រើសរើសស្ថិតនៅក្នុងបញ្ជីអ្នកឈ្នះដែលបានប្រកាស។",
+    "Betting":"25 ភ្នាល់",
+    "heading_lotto":"រហ័សជ្រើសរើសលេខផ្ទាល់ខ្លួនរបស់",
+    "smalltext_lotto":"ឆ្នោត",
+    "Net_Amount":"ចំនួនសុទ្ធ",
+    "Total":"សរុប",
+    "Result":"លទ្ធផល",
+    "Bet_Details":"ការភ្នាល់លម្អិត",
+    "Success":"ជោកជ័យ",
+    "Winning_Amount":"ចំនួនទឹកប្រាក់ឈ្នះ",
+    "Win_Category":"ប្រភេទឈ្នះ",
+    "Profit":"ចំនេញ",
+    "Losses":"ខាតបង់",
+    "View":"ពិនិត្យ",
+    "PAYOUTS":"ការទូទាត់សង",
+    "Winning_Payouts":"ការទូទាត់ប្រាក់ឈ្នះ",
+    "Prize_Payouts":"ទូទាត់ប្រាក់រង្វាន់",
+    "BIG_FORECAST":"ការព្យាករណ៍ធំ",
+    "SMALL_FORECAST":"ការព្យាករណ៍តូច",
+    "PRIZE_AMOUNT":"ចំនួនទឹកប្រាក់ឈ្នះ",
+    "Special_Prize":"រង្វាន់ពិសេស",
+    "Consolation_Prize":"រង្វាន់លួងលោម",
+    "1st_Prize":"រង្វាន់ទី 1",
+    "2nd_Prize":"រង្វាន់ទី 2",
+    "3rd_Prize":"រង្វាន់ទី 3",
+    "Betting_Date":"កាលបរិច្ឆេទនៃការភ្នាល់",
+    "User_Name":"ឈ្មោះ​អ្នកប្រើប្រាស់",
+    "Confirm":"បញ្ជាក់",
+    "Ok":"យល់ព្រម",
+    "Date":"កាលបរិច្ឆេទ",
+    "Package":"កញ្ចប់",
+    "Detail":"សេចក្ដីលំអិត",
+    "Search":"ការស្វែងរក",
+    "All_Game":"ល្បែងទាំងអស់",
+    "Transactions":"ប្រតិបត្តិការ",
+    "transaction_type":"ប្រភេទប្រតិបត្តិការ",
+    "transaction_id":"លេខ​សម្គាល់​ប្រតិ​ប​ត្ដិ​ការ",
+    "Betting_Details":"ព័ត៌មានលម្អិតអំពីការភ្នាល់",
+    "Transaction_Details":"ព័ត៌មានលម្អិតអំពីប្រតិបត្តិការ",
+    "Contest_your_chance_to":"ឪកាសប្រកួតប្រជែងរបស់អ្នក",
+    "Special":"ពិសេស",
+    "Draw":"ចាប់ផ្តើមភ្នាល់",
+    "Dont_miss_your_chance":"កុំខកខានឱកាសរបស់អ្នក។ អ្នកនឹងក្លាយជាបន្ទាប់របស់យើង",
+    "Lucky_Winner":"អ្នកមានសំណាងឈ្នះ?",
+    "Start_playing_now":"ចាប់ផ្តើមភ្នាល់ឥឡូវនេះ",
+    "Announcement":"សេចក្ដីប្រកាស",
+    "Play_now":"ភ្នាល់ឥឡូវនេះ",
+    "Past_Draw_Result":"ប្រវត្តិនៃការភ្នាល់",
+    "Last_draw_date":"កាលបរិច្ឆេទចាប់រង្វាន់ចុងក្រោយ",
+    "Draw_Id":"លេខសម្គាល់",
     "1":"1",
     "2":"2",
     "3":"3",
     "4":"4",
-    "clear":"Clear",
-    "submit":"Submit",
-    "Rebate":"Rebate",
-    "Rejected_Bet":"Rejected Bet",
-    "Over_Limit":"Over Limit",
-    "Accepted_bet_amount":"Accepted bet amount",
-    "Big":"Big",
-    "M":"M",
-    "P":"P",
-    "Bet_Successful":"Bet Successful"
+    "clear":"លុបចោល",
+    "submit":"ដាក់ស្នើរ",
+    "Rebate":"បញ្ចុះតម្លៃ",
+    "Rejected_Bet":"បដិសេធការភ្នាល់",
+    "Over_Limit":"លើសដែនកំណត់",
+    "Accepted_bet_amount":"ទទួលយកចំនួនទឹកប្រាក់ភ្នាល់",
+    "Big":"ធំ",
+    "M":"m",
+    "P":"p",
+    "Bet_Successful":"ការភ្នាល់ទទួលបានជោគជ័យ"
 }
