--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -4,16 +4,13 @@
     "Lotteries":"彩票",
     "Contact":"联络我们",
     "History":"历史注单",
-    "Index_tittle": "洛马乐透 - 主页",
-    "Lotteries_tittle": "洛马乐透 - 所有彩票页面",
-    "History_tittle": "洛马乐透 - 历史页面",
-    "Result_tittle": "洛马乐透 - 结果页面",
-    "NEED_TO_KNOW_ABOUT":"了解更多",
+    "Index_tittle":"大马彩 - 主页",
+    "Lotteries_tittle":"大马彩 - 所有彩票页面",
+    "History_tittle":"大马彩 - 历史页面",
+    "Result_tittle":"大马彩 - 结果页面",
     "how_to":"如何",
-    "play_4D":"玩 4D", 
-    "Lotto_online":"在线彩票",
+    "play_4D":"玩 4D",
     "Play_Lottery":"玩彩票",
-    "Explore_More":"探索更多",
     "copyright":"版权所有 © 2022。PokLotto 保留所有权利",
     "All_lotteries":"所有彩票",
     "pick_your_lucky_number":"选择你的幸运号码",
@@ -29,9 +26,6 @@
     "Small_Bet":"小",
     "Bet_Type":"投注类型",
     "Amount":"数额",
-    "Action":"行动",
-    "Box":"包字",
-    "iBox":"易宝盒",
     "Total_Stake":"总投注",
     "Cancel":"取消",
     "Check_Continue":"检查并继续",
@@ -45,66 +39,45 @@
     "step_3_tittle":"将添加选择的号码，检查您是否有足够的余额，然后下订单。",
     "step_4_heading":"检查中奖",
     "step_4_tittle":"恭喜！ 如果您选择的号码必配开彩结果，您就是中奖者。",
-    "Betting": "投注",
-    "heading_lotto": "快速选择您自己的号码",
-    "smalltext_lotto": "彩票",
-    "Commission": "委员会 (%)",
-    "Net_Amount": "净额",
-    "Total": "全部的",
-    "Sub_Total": "全部的",
-    "Result": "结果",
-    "Bet_Details": "投注详情",
-    "Success": "成功",
-    "Transactions_Successful": "交易成功~！",
-    "Thank_You": "",
-    "Your_Transactions_Reference_Number": "您的交易參考編號：#",
-    "Note": "筆記",
-    "seccess_msg": "要查看您的交易詳情，請前往 歷史 部分, 在 未結算 欄目下",
-    "Unsettled_Bets": "未结算注单",
-    "Settled_Bets": "已结算注单",
-    "Ref_Id": "注单号",
-    "Game_Play": "游戏",
-    "Betting_Date_From": "从下注日期",
-    "To": "至",
-    "Reference_Id": "注单号",
-    "Bet_for": "下注",
-    "Game_Name": "游戏名称",
-    "Filter_By_Ref_ID": "注单号筛选",
-    "Winning_Amount": "中奖金额",
-    "Win_Category": "中奖类别",
-    "Profit": "赢",
-    "Losses": "输",
-    "View": "查看",
-    "PAYOUTS": "中奖金额",
-    "Winning_Payouts": "中奖金额",
-    "Prize_Payouts": "中奖金额",
-    "BIG_FORECAST": "大",
-    "SMALL_FORECAST": "小",
-    "PRIZE_AMOUNT": "中奖金额",
-    "Special_Prize": "特别奖",
-    "Consolation_Prize": "安慰奖",
-    "1st_Prize": "头奖",
-    "2nd_Prize": "次奖",
-    "3rd_Prize": "三奖",
-    "Back": "后退",
-    "Betting_Date": "投注日期",
-    "User_Name": "用户名",
-    "Confirm": "确认",
-    "Ok": "好的",
-    "Date": "日期",
-    "Package": "包裹",
-    "Detail": "细节",
-    "Search": "搜索",
-    "All_Game": "所有游戏",
-    "No_Result_For_Date": "日期没有结果",
-    "Transactions": "ប្រតិបត្តិការ",
-
+    "Betting":"投注",
+    "heading_lotto":"快速选择您自己的号码",
+    "smalltext_lotto":"彩票",
+    "Net_Amount":"净额",
+    "Total":"全部的",
+    "Result":"结果",
+    "Bet_Details":"投注详情",
+    "Success":"成功",
+    "Winning_Amount":"中奖金额",
+    "Win_Category":"中奖类别",
+    "Profit":"赢",
+    "Losses":"输",
+    "View":"查看",
+    "PAYOUTS":"中奖金额",
+    "Winning_Payouts":"中奖金额",
+    "Prize_Payouts":"中奖金额",
+    "BIG_FORECAST":"大",
+    "SMALL_FORECAST":"小",
+    "PRIZE_AMOUNT":"中奖金额",
+    "Special_Prize":"特别奖",
+    "Consolation_Prize":"安慰奖",
+    "1st_Prize":"头奖",
+    "2nd_Prize":"次奖",
+    "3rd_Prize":"三奖",
+    "Betting_Date":"投注日期",
+    "User_Name":"用户名",
+    "Confirm":"确认",
+    "Ok":"确认",
+    "Date":"日期",
+    "Package":"包裹",
+    "Detail":"详细",
+    "Search":"搜索",
+    "All_Game":"所有游戏",
+    "Transactions":"交易",
     "transaction_type":"交易类型",
-    "transaction_id":"交易编号",
-
+    "transaction_id":"交易 ID",
     "Betting_Details":"投注详情",
     "Transaction_Details":"交易明细",
-    "Contest_your_chance_to": "倍增您的机会",
+    "Contest_your_chance_to":"倍增您的机会",
     "Special":"特别",
     "Draw":"开彩",
     "Dont_miss_your_chance":"不要错过机会，您将会是下一位",
@@ -115,23 +88,18 @@
     "Past_Draw_Result":"开奖记录",
     "Last_draw_date":"最后开奖日期",
     "Draw_Id":"期号",
-    "1":"一",
-    "2":"二",
-    "3":"三",
-    "4":"四",
+    "1":"1",
+    "2":"2",
+    "3":"3",
+    "4":"4",
     "clear":"清除",
     "submit":"提交",
     "Rebate":"回扣",
-    "Rejected_Bet":"被拒绝的赌注",
-    "Over_Limit":"超限",
-    "Accepted_bet_amount":"接受的投注金额",
-    "Big":"大的",
-    "M":"米",
-    "P":"磷",
-    "Bet_Successful":"投注成功",
-    "B":"乙",
-    "I":"我",
-    "R":"R",
-    "A":"一个",
-    "C":"C"
+    "Rejected_Bet":"拒收赌注",
+    "Over_Limit":"超过限额",
+    "Accepted_bet_amount":"接受金额",
+    "Big":"大",
+    "M":"M",
+    "P":"P",
+    "Bet_Successful":"投注成功"
 }
