--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -80,7 +80,7 @@
     "Contest_your_chance_to":"ឪកាសប្រកួតប្រជែងរបស់អ្នក",
     "Special":"ពិសេស",
     "Draw":"ចាប់ផ្តើមភ្នាល់",
-    "Dont_miss_your_chance":"កុំខកខានឱកាសរបស់អ្នក។ អ្នកនឹងក្លាយជាបន្ទាប់របស់យើង",
+    "Dont_miss_your_chance":"កុំខកខានឱកាសរបស់អ្នក។ អ្នកនឹងក្លាយជាអ្នកបន្ទាប់របស់យើង",
     "Lucky_Winner":"អ្នកមានសំណាងឈ្នះ?",
     "Start_playing_now":"ចាប់ផ្តើមភ្នាល់ឥឡូវនេះ",
     "Announcement":"សេចក្ដីប្រកាស",
