--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -22,8 +22,8 @@
     "Sr_No":"No.",
     "Auto":"Auto",
     "Number":"Number",
-    "Big_Bet":"Big Bet",
-    "Small_Bet":"Small Bet",
+    "Big_Bet":"Big",
+    "Small_Bet":"Small",
     "Bet_Type":"Bet Type",
     "Amount":"Amount",
     "Total_Stake":"Total Stake",
