--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -102,6 +102,16 @@
     "M":"M",
     "P":"P",
     "Bet_Successful":"Bet Successful",
+    "win_big":"WIN BIG",
 
-    "win_big":"WIN BIG"
+    "select_game_and_date":"SELECT DATE & GAME",
+    "3D_Bet_Number":"3D Bet Number",
+    "4D_Bet_Number":"4D Bet Number",
+    "Box":"Box",
+    "iBox":"iBox",
+    "Reverse":"Reverse",
+    "Select_All":"Select All",
+    "Company":"Company",
+    "Reset":"Reset",
+    "BET":"BET"
 }
