--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -114,5 +114,7 @@
     "Company":"ក្រុមហ៊ុន",
     "Reset":"កំណត់ឡើងវិញ",
     "BET":"ភ្នាល់",
-    "BettingList":"បញ្ជីភ្នាល់"
+    "BettingList":"បញ្ជីភ្នាល់",
+    "Select_Date_Range":"Select Date Range", 
+    "Ticket_No":"Ticket No"
 }
