--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -116,6 +116,8 @@
     "BET":"BET",
     "BettingList":" Betting List",
     "Select_Date_Range":"Select Date Range", 
-    "Ticket_No":"Ticket No"
+    "Ticket_No":"Ticket No",
+    "bet_successful":"Bet Successful",
+    "bet_failed":"Bet Failed"
 
 }
