--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -116,5 +116,7 @@
     "BET":"投注",
     "BettingList":"投注单",
     "Select_Date_Range":"Select Date Range", 
-    "Ticket_No":"Ticket No"
+    "Ticket_No":"Ticket No",
+    "bet_successful":"Bet Successful",
+    "bet_failed":"Bet Failed"
 }
