--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -135,7 +135,8 @@
     "no_data":"No Data",
     "game":"Game",
     "back":"Back",
-    "winning":"Winning"
+    "winning":"Winning",
+    "submit":"Submit"
 
 
 
