--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -141,9 +141,26 @@
 
     "bet_should_not_be_greater_than":"Bet should not be greater than ",
     "bet_should_not_be_less_than":"Bet should not be less than ",
-    "B/3A":"B/3A",
-    "S/3C":"S/3C"
     
+
+
+
+    "Today":"Today",
+    "Yesterday":"Yesterday",
+    "Last_7_Days":"Last 7 Days",
+    "Last_14_Days":"Last 14 Days",
+    "This_Month":"This Month",
+    "Last_Month":"Last Month",
+    "This_Year":"This Year",
+
+
+    "betting_list_report": "Betting List Report",
+
+    "winning_list":"Winning List",
+
+
+    "Total_bet_amount":"Total bet amount"
+
 
 
 
