--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -139,11 +139,10 @@
 
 
 
+
     "bet_should_not_be_greater_than":"Bet should not be greater than ",
     "bet_should_not_be_less_than":"Bet should not be less than ",
     
-
-
 
     "Today":"Today",
     "Yesterday":"Yesterday",
@@ -159,14 +158,41 @@
     "winning_list":"Winning List",
 
 
-    "Total_bet_amount":"Total bet amount"
+    "Total_bet_amount":"Total bet amount",
+
+    "filter_results":"Filter Results",
+
+    "no_draw_result":"No Draw Result",
+
+
+    "betting_history_report":"Betting History Report",
+
+    "prize_type":"Prize Type",
+
+    "Loading":"Loading",
+
+    "no_profile_data":"No profile data",
+
+    "access_denied":"Access Denied",
+
+    "access_denied_or_forbbiden":"Access Denied Or Forbbiden",
+
+    "403_message":"The page or resource you’re trying to reach is absolutely forbbiden for some reason.",
+
+    "return_to":"Return To",
+
+    "page_not_found":"Page Not Found",
+
+    "status":"status",
+
+    "404_message":"The page you are looking for might have been removed, had the name changed or it is temporary unavailable",
 
 
 
+    "no_results":"No results",
 
 
-
-
+    "no_winning_ticket":"No Winning Ticket"
 
 
 
