--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -134,6 +134,34 @@
     "no_data":"没有数据",
     "game":"游戏",
     "back":"返回",
-    "winning":"中奖金额"
+    "winning":"中奖金额",
+    
+    "bet_should_not_be_greater_than":"超过最高投注限额：",
+    "bet_should_not_be_less_than":"少过最低投注限额：",
+    "Today":"今天",
+    "Yesterday":"昨日",
+    "Last_7_Days":"过去 7 天",
+    "Last_14_Days":"过去 14 天",
+    "This_Month":"今月",
+    "Last_Month":"上个月",
+    "This_Year":"今年",
+    "betting_list_report": "下注状况",
+    "winning_list":"中奖报表",
+    "Total_bet_amount":"投注总额",
+    "filter_results":"搜索开奖结果",
+    "no_draw_result":"无开奖结果",
+    "betting_history_report":"下注记录",
+    "prize_type":"奖项",
+    "Loading":"正在加载",
+    "no_profile_data":"无资料",
+    "access_denied":"Access Denied",
+    "access_denied_or_forbbiden":"Access Denied Or Forbbiden",
+    "403_message":"The page or resource you’re trying to reach is absolutely forbbiden for some reason.",
+    "return_to":"返回",
+    "page_not_found":"Page Not Found",
+    "status":"状况",
+    "404_message":"The page you are looking for might have been removed, had the name changed or it is temporary unavailable",
+    "no_results":"无",
+    "no_winning_ticket":"No Winning Ticket"
 
 }
