--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -164,6 +164,6 @@
     "404_message":"The page you are looking for might have been removed, had the name changed or it is temporary unavailable",
     "no_results":"No results",
     "no_winning_ticket":"No Winning Ticket",
-    "previous":"Previous",
+    "previous":"< Previous",
     "next":"Next"
 }
