--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -162,6 +162,6 @@
     "status":"状况",
     "404_message":"The page you are looking for might have been removed, had the name changed or it is temporary unavailable",
     "no_results":"无",
-    "no_winning_ticket":"No Winning Ticket"
+    "no_winning_ticket":"无中奖资料"
 
 }
