--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -165,5 +165,5 @@
     "no_results":"No results",
     "no_winning_ticket":"No Winning Ticket",
     "previous":"< Previous",
-    "next":"Next"
+    "next":"Next >"
 }
