--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -165,5 +165,12 @@
     "no_results":"No results",
     "no_winning_ticket":"No Winning Ticket",
     "previous":"< Previous",
-    "next":"Next >"
+    "next":"Next >",
+    "P1":"P1",
+    "P2":"P2",
+    "P3":"P3",
+    "S":"S",
+    "C":"C",
+    "All":"All"
+    
 }
