--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -159,16 +159,17 @@
     "page_not_found":"Page Not Found",
     "status":"ស្ថានភាព",
     "404_message":"The page you are looking for might have been removed, had the name changed or it is temporary unavailable",
+    "no_results":"គ្មាន​លទ្ធផល",
+    "no_winning_ticket":"គ្មានសំបុត្រឈ្នះ",
     "previous":"< មុន",
     "next":"បន្ទាប់ >",
     "P1":"រង្វាន់ទីមួយ",
     "P2":"រង្វាន់ទីពីរ",
     "P3":"រង្វាន់ទីបី",
     "S":"រង្វាន់ពិសេស",
-    "C":"រង្វាន់លើកទឹកចិត្",
+    "C":"រង្វាន់លើកទឹកចិត្ត",
     "All":"រង្វាន់ទាំងអស់",
-    "no_results":"គ្មាន​លទ្ធផល",
-    "no_winning_ticket":"គ្មានសំបុត្រឈ្នះ"
+    
 
 
 
