custom range trasnlation

--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -114,7 +114,7 @@
     "Company":"公司",
     "Reset":"重置",
     "BET":"投注",
-    "BettingList":"投注单",
+    "BettingList":"下注状况",
     "betting_history":"投注历史",
 
 
@@ -145,6 +145,7 @@
     "This_Month":"今月",
     "Last_Month":"上个月",
     "This_Year":"今年",
+    "custom_range":"自定义",
     "betting_list_report": "下注状况",
     "winning_list":"中奖报表",
     "Total_bet_amount":"投注总额",
@@ -162,6 +163,7 @@
     "status":"状况",
     "404_message":"The page you are looking for might have been removed, had the name changed or it is temporary unavailable",
     "no_results":"无",
+    "no_winning_ticket":"无中奖资料",
     "previous":"< Previous",
     "next":"Next >",
     "P1":"首奖",
@@ -169,7 +171,6 @@
     "P3":"P3",
     "S":"S",
     "C":"C",
-    "All":"All",
-    "no_winning_ticket":"无中奖资料"
+    "All":"All"
 
 }
