--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -143,6 +143,7 @@
     "This_Month":"ខែ​នេះ",
     "Last_Month":"ខែមុន",
     "This_Year":"នាំ​នេះ",
+    "custom_range":"ប្ដូរតាមបំណង",
     "betting_list_report": "បញ្ជីភ្នាល់",
     "winning_list":"បញ្ជីឈ្នះ",
     "Total_bet_amount":"ចំនួនភ្នាល់សរុប",
@@ -168,7 +169,7 @@
     "P3":"រង្វាន់ទីបី",
     "S":"រង្វាន់ពិសេស",
     "C":"រង្វាន់លើកទឹកចិត្ត",
-    "All":"រង្វាន់ទាំងអស់",
+    "All":"រង្វាន់ទាំងអស់"
     
 
 
