--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -171,6 +171,26 @@
     "P3":"三奖",
     "S":"特别奖",
     "C":"安慰奖",
-    "All":"全部"
+    "All":"全部",
+
+    "Monday":"星期一",
+    "Tuesday":"星期二",
+    "Wednesday":"星期三",
+    "Thursday":"星期四",
+    "Friday":"星期五",
+    "Saturday":"星期六",
+    "Sunday":"星期日",
+    "January":"一月",
+    "February":"二月",
+    "March":"三月",
+    "April":"四月",
+    "May":"五月",
+    "June":"六月",
+    "July":"七月",
+    "August":"八月",
+    "September":"九月",
+    "October":"十月",
+    "November":"十一月",
+    "December":"十二月"
 
 }
