--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -172,6 +172,26 @@
     "P3":"3rd Prize",
     "S":"Special",
     "C":"Consolation",
-    "All":"All"
+    "All":"All",
+
+    "Monday":"Monday",
+    "Tuesday":"Tuesday",
+    "Wednesday":"Wednesday",
+    "Thursday":"Thursday",
+    "Friday":"Friday",
+    "Saturday":"Saturday",
+    "Sunday":"Sunday",
+    "January":"January",
+    "February":"February",
+    "March":"March",
+    "April":"April",
+    "May":"May",
+    "June":"June",
+    "July":"July",
+    "August":"August",
+    "September":"September",
+    "October":"October",
+    "November":"November",
+    "December":"December"
     
 }
