--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -169,8 +169,27 @@
     "P3":"រង្វាន់ទីបី",
     "S":"រង្វាន់ពិសេស",
     "C":"រង្វាន់លើកទឹកចិត្ត",
-    "All":"រង្វាន់ទាំងអស់"
+    "All":"រង្វាន់ទាំងអស់",
     
+    "Monday":"ថ្ងៃច័ន្ទ",
+    "Tuesday":"ថ្ងៃអង្គារ",
+    "Wednesday":"ថ្ងៃពុធ",
+    "Thursday":"ថ្ងៃព្រហស្បតិ៍",
+    "Friday":"ថ្ងៃសុក្រ",
+    "Saturday":"ថ្ងៃសៅរ៍",
+    "Sunday":"ថ្ងៃអាទិត្យ",
+    "January":"មករា",
+    "February":"ខែកុម្ភៈ",
+    "March":"ខែមីនា",
+    "April":"មេសា",
+    "May":"ឧសភា",
+    "June":"ខែមិថុនា",
+    "July":"ខែកក្កដា",
+    "August":"សីហា",
+    "September":"ខែកញ្ញា",
+    "October":"តុលា",
+    "November":"ខែវិច្ឆិកា",
+    "December":"ខែធ្នូ"
 
 
 
