--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -85,7 +85,7 @@
     "Start_playing_now":"Start Betting Now",
     "Announcement":"Announcement",
     "Play_now":"Bet Now",
-    "Past_Draw_Result":"Past draw result",
+    "Past_Draw_Result":"Past Draw Result",   
     "Last_draw_date":"Last draw date",
     "Draw_Id":"Draw ID",
     "1":"1",
