--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -191,6 +191,13 @@
     "September":"九月",
     "October":"十月",
     "November":"十一月",
-    "December":"十二月"
+    "December":"十二月",
 
+    "Mo":"一",
+    "Tu":"二",
+    "We":"三",
+    "Th":"四月",
+    "Fr":"五",
+    "Sa":"六",
+    "Su":"日"
 }
