--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -189,12 +189,14 @@
     "September":"ខែកញ្ញា",
     "October":"តុលា",
     "November":"ខែវិច្ឆិកា",
-    "December":"ខែធ្នូ"
+    "December":"ខែធ្នូ",
 
-
-
-
-
-
+    "Mo":"ច័ន្ទ",
+    "Tu":"អង្គារ",
+    "We":"ពុធ",
+    "Th":"ព្រហ.",
+    "Fr":"សុក្រ",
+    "Sa":"សៅរ៍",
+    "Su":"អាទិត្យ"
     
 }
