date range picker translation

--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -179,17 +179,17 @@
     "Saturday":"ថ្ងៃសៅរ៍",
     "Sunday":"ថ្ងៃអាទិត្យ",
     "January":"មករា",
-    "February":"ខែកុម្ភៈ",
-    "March":"ខែមីនា",
+    "February":"កុម្ភៈ",
+    "March":"មីនា",
     "April":"មេសា",
     "May":"ឧសភា",
-    "June":"ខែមិថុនា",
-    "July":"ខែកក្កដា",
+    "June":"មិថុនា",
+    "July":"កក្កដា",
     "August":"សីហា",
-    "September":"ខែកញ្ញា",
+    "September":"កញ្ញា",
     "October":"តុលា",
-    "November":"ខែវិច្ឆិកា",
-    "December":"ខែធ្នូ",
+    "November":"វិច្ឆិកា",
+    "December":"ធ្នូ",
 
     "Mo":"ច័ន្ទ",
     "Tu":"អង្គារ",
