--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -205,9 +205,10 @@
     "tickect_update":"សំបុត្រត្រូវបានធ្វើបច្ចុប្បន្នភាពដោយជោគជ័យ", 
     "ticket_delete":"សំបុត្រត្រូវបានលុបដោយជោគជ័យ", 
     "ticket_fetch":"សំបុត្រត្រូវបានទាញយកដោយជោគជ័យ", 
-    "no_ticket":"គ្មានសំបុត្រ"
+    "no_ticket":"គ្មានសំបុត្រ",
 
 
 
+    "Select":"ជ្រើសរើស"
     
 }
