--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -207,6 +207,10 @@
     "tickect_update":"注单成功更新", 
     "ticket_delete":"注单成功删除", 
     "ticket_fetch":"注单成功获取", 
-    "no_ticket":"无注单"
+    "no_ticket":"无注单",
+
+
+
+    "Select":"选择"
 
 }
