--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -189,7 +189,9 @@
     "September":"ខែកញ្ញា",
     "October":"តុលា",
     "November":"ខែវិច្ឆិកា",
-    "December":"ខែធ្នូ"
+    "December":"ខែធ្នូ",
+
+    "Apply":"Apply"
 
 
 
