--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -200,7 +200,6 @@
     "Please_select_at_least_one_number":"សូមជ្រើសរើសយ៉ាងហោចណាស់មួយលេខ!",
     "Please_Enter_Valid_Number":"សូមបញ្ចូលលេខដែលមានសុពលភាព",
     "Please_Enter_Amount":"សូមបញ្ចូលចំនួនទឹកប្រាក់",
-    "Apply":"Apply",
 
     "Mo":"ច័ន្ទ",
     "Tu":"អង្គារ",
@@ -209,6 +208,6 @@
     "Fr":"សុក្រ",
     "Sa":"សៅរ៍",
     "Su":"អាទិត្យ" ,
-    "Select":"Select",
-    "Delete":"Delete"
+    "Select":"ជ្រើសរើស",
+    "Delete":"លុប"
 }
