--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -85,7 +85,7 @@
     "Start_playing_now":"ចាប់ផ្តើមភ្នាល់ឥឡូវនេះ",
     "Announcement":"សេចក្ដីប្រកាស",
     "Play_now":"ភ្នាល់ឥឡូវនេះ",
-    "Past_Draw_Result":"លទ្ធផលចាប់ឆ្នោតកន្លងមក",
+    "Past_Draw_Result":"លទ្ធផល",
     "Last_draw_date":"កាលបរិច្ឆេទចាប់រង្វាន់ចុងក្រោយ",
     "Draw_Id":"លេខសម្គាល់",
     "1":"1",
