--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -169,7 +169,7 @@
     "P3":"រង្វាន់ទីបី",
     "S":"រង្វាន់ពិសេស",
     "C":"រង្វាន់លើកទឹកចិត្ត",
-    "All":"រង្វាន់ទាំងអស់",
+    "All":"ទាំងអស់",
     
     "Monday":"ថ្ងៃច័ន្ទ",
     "Tuesday":"ថ្ងៃអង្គារ",
