--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -147,7 +147,7 @@
     "This_Year":"今年",
     "custom_range":"自定义",
     "betting_list_report": "搜索记录",
-    "winning_list":"搜索记录",
+    "winning_list":"中奖报表",
     "Total_bet_amount":"投注总额",
     "filter_results":"搜索开奖结果",
     "no_draw_result":"无开奖结果",
