--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -148,7 +148,7 @@
     "This_Year":"This Year",
     "custom_range":"Custom Range",
     "betting_list_report": "Search Records",
-    "winning_list":"Search Records",
+    "winning_list":"Winning List",
     "Total_bet_amount":"Total bet amount",
     "filter_results":"Search draw result",
     "no_draw_result":"No Draw Result",
