--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -145,7 +145,7 @@
     "This_Year":"នាំ​នេះ",
     "custom_range":"ប្ដូរតាមបំណង",
     "betting_list_report": "ស្វែងរកកំណត់ត្រា",
-    "winning_list":"ស្វែងរកកំណត់ត្រា",
+    "winning_list":"បញ្ជីឈ្នះ",
     "Total_bet_amount":"ចំនួនភ្នាល់សរុប",
     "filter_results":"លទ្ធផលស្វែងរក",
     "no_draw_result":"គ្មានលទ្ធផលស្មើ",
