search records language change and set

--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -149,6 +149,7 @@
     "custom_range":"Custom Range",
     "betting_list_report": "Search Records",
     "winning_list":"Winning List",
+    "winning_list_search":"Search Records",
     "Total_bet_amount":"Total bet amount",
     "filter_results":"Search draw result",
     "no_draw_result":"No Draw Result",
