--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -146,6 +146,7 @@
     "custom_range":"ប្ដូរតាមបំណង",
     "betting_list_report": "ស្វែងរកកំណត់ត្រា",
     "winning_list":"បញ្ជីឈ្នះ",
+    "winning_list_search":"ស្វែងរកកំណត់ត្រា",
     "Total_bet_amount":"ចំនួនភ្នាល់សរុប",
     "filter_results":"លទ្ធផលស្វែងរក",
     "no_draw_result":"គ្មានលទ្ធផលស្មើ",
