--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -233,5 +233,36 @@
     "BettingList_tittle":"Malaysia Lottery - Betting List page",
     "WinningList_tittle":"Malaysia Lottery - Winning List page",
 
-    "tittle_main":"大马彩"
+    "tittle_main":"大马彩",
+    "1st":"一号",
+    "2nd":"二号",
+    "3rd":"三号",
+    "4th":"四号",
+    "5th":"五号",
+    "6th":"六号",
+    "7th":"七号",
+    "8th":"八号",
+    "9th":"九号",
+    "10th":"十号",
+    "11th":"十一号",
+    "12th":"十二号",
+    "13th":"十三号",
+    "14th":"十四号",
+    "15th":"十五号",
+    "16th":"十六号",
+    "17th":"十七号",
+    "18th":"十八号",
+    "19th":"十九号",
+    "20th":"廿号",
+    "21st":"廿一号",
+    "22nd":"廿二号",
+    "23rd":"廿三号",
+    "24th":"廿四号",
+    "25th":"廿五号",
+    "26th":"廿六号",
+    "27th":"廿七号",
+    "28th":"廿八号",
+    "29th":"廿九号",
+    "30th":"三十号",
+    "31st":"三十一号"
 }
