--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -263,7 +263,7 @@
     "30th":"ទី ៣០",
     "31st":"ទី ៣១",
 
-    "merchant has disabled":"ឈ្មួញត្រូវបានបិទហើយ",
-    "market has disabled":"ទីផ្សារត្រូវបានបិទហើយ"
+    "merchant has disabled":"អាជីវករត្រូវបានផ្អាកបណ្តោះអាសន្ន។ សូមទាក់ទងផ្នែកបម្រើអតិថិជន។",
+    "market has disabled":"ទីផ្សារបានបិទ។ គ្មានការភ្នាល់ត្រូវបានអនុញ្ញាត"
     
 }
