--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -267,8 +267,7 @@
     "29th":"29TH",
     "30th":"30TH",
     "31st":"31ST",
-
-    "merchant has disabled":"Merchant is temporary inactivated. Please contact customer service.",
-    "market has disabled":"Market has closed. No bet is allowed"
+    "merchant has disabled":"Merchant is temporary deactivated. Please contact customer service.",
+    "market has disabled":"Market is closed. No bet is allowed"
 
 }
