--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -200,6 +200,9 @@
     "Please_Enter_Valid_Number":"សូមបញ្ចូលលេខដែលមានសុពលភាព",
     "Please_Enter_Amount":"សូមបញ្ចូលចំនួនទឹកប្រាក់",
 
+    "merchant_id_connt_be_0":"លេខសម្គាល់ពាណិជ្ជករត្រូវតែធំជាង 0",
+    "member_id_connt_be_0":"លេខសម្គាល់សមាជិកត្រូវតែធំជាង 0",
+
     "Mo":"ច័ន្ទ",
     "Tu":"អង្គារ",
     "We":"ពុធ",
