--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -204,6 +204,10 @@
     "Please_Enter_Valid_Number":"Please Enter Valid Number",
     "Please_Enter_Amount":"Please Enter Amount",
 
+    "merchant_id_connt_be_0":"The Merchant id must be greater than 0",
+    "member_id_connt_be_0":"The Member id must be greater than 0",
+
+
     "insuffient_balance":"Insuffient balance to proceed for this transaction!", 
     "not_wallet":"You do not have wallet", 
     "tickect_success":"Ticket created successfully", 
