--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -264,6 +264,7 @@
     "31st":"ទី ៣១",
 
     "merchant has disabled":"អាជីវករត្រូវបានផ្អាកបណ្តោះអាសន្ន។ សូមទាក់ទងផ្នែកបម្រើអតិថិជន។",
-    "market has disabled":"ទីផ្សារបានបិទ។ គ្មានការភ្នាល់ត្រូវបានអនុញ្ញាត"
+    "market has disabled":"ទីផ្សារបានបិទ។ គ្មានការភ្នាល់ត្រូវបានអនុញ្ញាត",
+    "coming_soon_text":"មកដល់ឆាប់ៗនេះ"
     
 }
