--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -270,5 +270,6 @@
     "31st":"三十一号",
 
     "merchant has disabled":"商户暂时停用，请联系客服",
-    "market has disabled":"盘口已经关闭.  无法下注"
+    "market has disabled":"盘口已经关闭.  无法下注",
+    "coming_soon_text":"快来了"
 }
