--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -208,7 +208,7 @@
     "member_id_connt_be_0":"The Member id must be greater than 0",
 
 
-    "insuffient_balance":"Insuffient balance to proceed for this transaction!", 
+    "insuffient_balance":"Insufficient balance to proceed for this transaction!", 
     "not_wallet":"You do not have wallet", 
     "tickect_success":"Ticket created successfully", 
     "tickect_update":"Ticket updated successfully", 
