--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -278,6 +278,6 @@
     "Magnum":"万能",
     "Da Ma Cai":"大马彩",
     "Toto":"多多",
-    "Calculate":"Calculate",
+    "Calculate":"计算",
     "coming_soon_text":"快来了"
 }
