calculator url added in header

--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -279,5 +279,6 @@
     "Da Ma Cai":"大马彩",
     "Toto":"多多",
     "Calculate":"计算",
-    "coming_soon_text":"快来了"
+    "coming_soon_text":"快来了",
+    "Calculator":"计算器"
 }
