--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -281,6 +281,7 @@
     "Da Ma Cai":"Da Ma Cai",
     "ToTo":"ToTo",
     "Calculate":"Calculate",
-    "coming_soon_text":"Coming Soon"
+    "coming_soon_text":"Coming Soon",
+    "Calculator":"Calculator"
 
 }
