--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -276,6 +276,7 @@
     "Da Ma Cai":"Da Ma Cai",
     "ToTo":"ToTo",
     "Calculate":"គណនា",
-    "coming_soon_text":"មកដល់ឆាប់ៗនេះ"
+    "coming_soon_text":"មកដល់ឆាប់ៗនេះ",
+    "Calculator":"ម៉ាស៊ីនគិតលេខ"
     
 }
