translation for session out model

--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -280,5 +280,11 @@
     "Toto":"多多",
     "Calculate":"计算",
     "coming_soon_text":"快来了",
-    "Calculator":"计算器"
+    "Calculator":"计算器",
+
+
+    "warning": "警告",
+    "session_expired": "您的登录会话已过期。",
+    "continue_login": "请重新登录以继续。",
+    "ok": "好的"
 }
