--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -277,6 +277,12 @@
     "ToTo":"ToTo",
     "Calculate":"គណនា",
     "coming_soon_text":"មកដល់ឆាប់ៗនេះ",
-    "Calculator":"ម៉ាស៊ីនគិតលេខ"
+    "Calculator":"ម៉ាស៊ីនគិតលេខ",
+
+
+    "warning": "ការព្រមាន",
+    "session_expired": "វគ្គចូលរបស់អ្នកបានផុតកំណត់ហើយ។",
+    "continue_login": "សូមចូលម្តងទៀតដើម្បីបន្ត។",
+    "ok": "យល់ព្រម"
     
 }
