--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -282,5 +282,29 @@
     "ToTo":"ToTo",
     "Calculate":"Calculate",
     "coming_soon_text":"Coming Soon",
-    "Calculator":"Calculator"
+    "Calculator":"Calculator",
+
+    "Betting_Tips":"Analysis",
+    "Start_Date":"Start Date",
+    "End_Date":"End Date",
+    "Permutation":"Permutation",
+    "Prize":"Prize",
+    "Top_3":"Top 3",
+    "Total_Permutation":"Total Permutation",
+    "Total_Hits":"Total Hits",
+    "Min_DrawGap":"Min Draw Gap",
+    "Max_DrawGap":"Max Draw Gap",
+    "Avg_DrawGap":"Avg Draw Gap",
+    "Draws":"Draws",
+    "Last_Hit_DrawNo":"Last Hit Draw No",
+    "Last_Hit_DrawID":"Last Hit Draw ID",
+    "Estimate_Next_Hit_DrawNo":"Estimate Next Hit Draw No",
+    "Estimate_Next_Draw_Date":"Estimate Next Hit Draw Date",
+    "DrawID":"Draw ID",
+    "DrawNo":"Draw No",
+    "Day":"Day",
+    "Source":"Source",
+    "DrawGap":"Draw Gap"
+
+
 }
